# NexHacks

./: .cursorrules  .env.vercel  .gitignore  .vercelignore  ARCHITECTURE.md  AUTO_TEST_DEPLOYMENT.ps1  CHANGES.md  CHROME_SETUP.md  COMPLETION_CHECKLIST.md  DEBUG_500_ERROR.md  DEPLOYMENT_FIX.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_EXPLAINED.md  DEPLOYMENT_SUCCESS.md  DEVPOST_ABOUT.md  EMBEDDING_SIMILARITY_IMPLEMENTATION.md  ERRORS_FIXED.md  FILE_CHANGES_DETAIL.md  FILE_MANIFEST.md  FINAL_STATUS.md  FINAL_STATUS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_CHECKLIST.md  LAYOUT_ARCHITECTURE_DIAGRAMS.md  LAYOUT_DOCUMENTATION_INDEX.md  LAYOUT_QUICK_REF.md  LAYOUT_REDESIGN_CHECKLIST.md  LAYOUT_REDESIGN_COMPLETE.md  LAYOUT_REDESIGN_SUMMARY.md  LAYOUT_VISUAL_GUIDE.md  License  MATCHING_IMPROVEMENTS.md  NEWS_TAB_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_DEPLOY.md  QUICK_REFERENCE.md  QUICK_RUN.md  (+31 more)
Extension/: .cursorrules  BUILD_CHECKLIST.md  FIXES_APPLIED.md  FRONTEND_IMPROVEMENTS.md  HOW_TO_TEST.md  PRODUCTION_SETUP.md  QUICK_UPDATE.md  RELOAD_INSTRUCTIONS.md  STORAGE_ERROR_EXPLAINED.md  STORAGE_ERROR_FIX.md  TROUBLESHOOTING_SIMILAR.md  UPDATE_TO_PRODUCTION.md  package-lock.json  package.json  preview.html  tsconfig.json  vite-env.d.ts  vite.config.ts
Polymarket API/: get_event_data.py  get_markets_data.py
Polymarket_API/: get_event_data.py  get_similar_markets.py  get_similarity_scores.py  news.py
api/: index.py  main.py  requirements.txt
backend/: .gitignore  .vercelignore  config.py  database.py  (+4 more)
(+111 files in other folders)
